--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Escort Service Gurgaon</title>
-    <meta charset="utf-8"/>
+    <meta  charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--[if lte IE 8]>
     <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
     <!--[if lte IE 9]>
     <link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
-</head>
+</head>s
 <body>
 
 <!-- Header -->
@@ -54,7 +54,7 @@
 
     <section id="top1" class="one dark cover">
         <h1>
-            <img src="images/whatsapp.png" alt="whatsapp escort" height="42" width="42"/>
+            <img id= 'cp' src="images/whatsapp.png" alt="whatsapp escort" height="42" width="42"/>
             +91-8750541626,
             +91-9015451766
         </h1>
@@ -91,43 +91,43 @@
                 <div class="4u 12u$(mobile)">
                     <article class="item">
                         <a href="#" class="image fit"><img src="images/fun.jpg" alt="sex in gurgaon"/></a>
-                        <header>
-                            <h3>R1</h3>
-                        </header>
+                        <div>
+                            <h4>R1</h4>
+                        </div>
                     </article>
                     <article class="item">
                         <a href="#" class="image fit"><img src="images/fun5.jpg" alt="sex in gurgaon"/></a>
-                        <header>
-                            <h3>W1</h3>
-                        </header>
+                        <div>
+                            <h4>W1</h4>
+                        </div>
                     </article>
                 </div>
                 <div class="4u 12u$(mobile)">
                     <article class="item">
                         <a href="#" class="image fit"><img src="images/fun6.jpg" alt="sex in gurgaon"/></a>
-                        <header>
-                            <h3>R2</h3>
-                        </header>
+                        <div>
+                            <h4>R2</h4>
+                        </div>
                     </article>
                     <article class="item">
                         <a href="#" class="image fit"><img src="images/fun7.jpg" alt="sex in gurgaon"/></a>
-                        <header>
-                            <h3>B2</h3>
-                        </header>
+                        <div>
+                            <h4>B2</h4>
+                        </div>
                     </article>
                 </div>
                 <div class="4u$ 12u$(mobile)">
                     <article class="item">
                         <a href="#" class="image fit"><img src="images/fun8.jpg" alt=""/></a>
-                        <header>
-                            <h3>B1</h3>
-                        </header>
+                        <div>
+                            <h4>B1</h4>
+                        </div>
                     </article>
                     <article class="item">
                         <a href="#" class="image fit"><img src="images/fun9.jpg" alt=""/></a>
-                        <header>
-                            <h3>W2</h3>
-                        </header>
+                        <div>
+                            <h4>W2</h4>
+                        </div>
                     </article>
                 </div>
             </div>
