--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Escort Service Gurgaon</title>
-    <meta  charset="utf-8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--[if lte IE 8]>
     <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
     <!--[if lte IE 9]>
     <link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
-</head>s
+</head>
 <body>
 
 <!-- Header -->
@@ -28,7 +28,8 @@
         <div id="logo">
             <span class="image avatar48"><img src="images/admin.jpg" alt=""/></span>
             <h1 id="title">Sarah</h1>
-            <p>Escort Service Gurgaon</p>
+            <p hidden="hidden">Escort Service Gurgaon</p>
+            <p>Escort Service Delhi NCR</p>
         </div>
 
         <!-- Nav -->
@@ -49,16 +50,15 @@
 
 <!-- Main -->
 <div id="main">
-
     <!-- Intro -->
-
     <section id="top1" class="one dark cover">
-        <h1>
-            <img id= 'cp' src="images/whatsapp.png" alt="whatsapp escort" height="42" width="42"/>
-            +91-8750541626,
-            +91-9015451766
-        </h1>
-
+        <div>
+            <img src="images/whatsapp.png" alt="whatsapp escort" height="42" width="42"/>
+            <div style="color: #0e0806">
+                +91-8750541626,
+                +91-9015451766
+            </div>
+        </div>
 
         <div class="container">
             <header>
@@ -135,7 +135,6 @@
         </div>
     </section>
 
-
     <!-- Contact -->
     <section id="contact" class="four">
         <div class="container">
@@ -146,11 +145,11 @@
 
             <p>Have fun at the reasonable price. We provide a service that is not forgotten.
                 She'll be there to save your day.
-                A service you won't miss..
-                A touch you can't resist..
-                A kiss you will be melt..
-                I am just a call away.....
-            </p>
+                Unlike most escort agencies out there, that use bait and switch tricks to attract new customers,
+                constantly changing their website domains and phone numbers - we have established an honorable
+                reputation in the industry. Our primary goal is to convert new customers into long term regular clients
+                by meeting and exceeding the high expectations of the most discriminating clientele. For over 14 years
+                we work with the same phone number and website! </p>
 
             <article class="item">
                 <img src="images/whatsapp.png" alt="" height="42" width="42"/>
@@ -159,7 +158,7 @@
 
             </article>
 
-            <form method="post" action="#">
+            <form method="post">
                 <div class="row1">
                     <div class="12u$">
                         <textarea name="message" placeholder="Simply send the dress color of girls above, we will understand your preference.
@@ -183,8 +182,8 @@
 
     <!-- Copyright -->
     <ul class="copyright">
-        <li>&copy; Untitled. All rights reserved.</li>
-        <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy;All rights reserved of fun.</li>
+
     </ul>
 
 </div>
