--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <span class="image avatar48"><img src="images/admin.jpg" alt=""/></span>
             <h1 id="title">Sarah</h1>
             <p hidden="hidden">Escort Service Gurgaon</p>
-            <p>Escort Service Delhi NCR</p>
         </div>
 
         <!-- Nav -->
@@ -62,7 +61,7 @@
 
         <div class="container">
             <header>
-                <h2 class="alt"><strong>Escort Service across Delhi NCR</strong></h2>
+                <h2 class="alt"><strong>Escort Service Gurgaon</strong></h2>
                 <h3>A dedicated professional team for service in NCR.</h3>
                 <p>Only here to bring professionalism in the business<br/>
                     Never had a bad experience. Full refund for unsataisfaciton.</p>
@@ -90,13 +89,13 @@
             <div class="row">
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun.jpg" alt="sex in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun.jpg" alt="cheap service in gurgaon"/></a>
                         <div>
                             <h4>R1</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun5.jpg" alt="sex in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun5.jpg" alt="cheap service in gurgaon"/></a>
                         <div>
                             <h4>W1</h4>
                         </div>
@@ -104,13 +103,13 @@
                 </div>
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun6.jpg" alt="sex in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun6.jpg" alt="cheap service in gurgaon"/></a>
                         <div>
                             <h4>R2</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun7.jpg" alt="sex in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun7.jpg" alt="cheap service in gurgaon"/></a>
                         <div>
                             <h4>B2</h4>
                         </div>
