--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <head>
     <title>Escort Service Gurgaon | Whatsapp 9015451766 </title>
     <meta charset="utf-8"/>
+    <meta name="keywords"
+          content="Escort service, Escorts Girls,Cheap Escort service, Safe Escort Service, Reliable Escort Service, Beautiful girls in Gurgaon, beautiful girl image,">
+
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--[if lte IE 8]>
     <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
     <!--[if lte IE 9]>
     <link rel="stylesheet" href="assets/css/ie9.css"/><![endif]-->
+
 </head>
 <body>
 
@@ -27,18 +31,18 @@
         <!-- Logo -->
         <div id="logo">
             <span class="image avatar48"><img src="images/admin.jpg" alt=""/></span>
-            <h1 id="title">Sarah</h1>
+            <h1 id="title">Safe Escort Service</h1>
             <p hidden="hidden">Escort Service Gurgaon</p>
         </div>
 
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">We</span></a>
+                <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">About</span></a>
                 </li>
-                <li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Our Service</span></a>
+                <li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Escort Services Available</span></a>
                 </li>
-                <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a>
+                <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact Escorts</span></a>
                 </li>
             </ul>
         </nav>
@@ -62,12 +66,14 @@
         <div class="container">
             <header>
                 <h2 class="alt"><strong>Escort Service Gurgaon</strong></h2>
-                <h3>A dedicated professional team for service in NCR.</h3>
-                <p>Only here to bring professionalism in the business<br/>
-                    Never had a bad experience. Full refund for unsataisfaciton.</p>
+                <h3>Beautiful Girls for escort</h3>
+                <h3>Give your wildest dream a reality.</h3>
+
+                <p>Select from too many cute girls from our directory<br/>
+                    Never had a bad experience. Full refund for unsatisfactory service.</p>
             </header>
             <footer>
-                <a href="#portfolio" class="button scrolly">Hold your breath then Click here</a>
+                <a href="#portfolio" class="button scrolly">Click here</a>
             </footer>
 
         </div>
@@ -78,24 +84,23 @@
         <div class="container">
 
             <header>
-                <h2>Services Available</h2>
+                <h2>Escort Services Available</h2>
             </header>
 
-            <p>Want to enjoy the real Indian beauty at affordable rates.
-                Our girls are the best option for you guys in Gurgaon.
-                I am high class Indian independent escort service provider girl
-                and nowadays I offer my hot services to the people of Gurgaon at pocket friendly rate.</p>
+            <p> Come to us for safe escort service in Gurgaon. We have in the service for quite long. We have a
+                established and trusted name.
+                Our girls are the cute, safe and lovable.</p>
 
             <div class="row">
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun.jpg" alt="cheap service in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun.jpg" alt="cheap escort service in gurgaon"/></a>
                         <div>
                             <h4>R1</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun5.jpg" alt="cheap service in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun5.jpg" alt="best escort service in gurgaon"/></a>
                         <div>
                             <h4>W1</h4>
                         </div>
@@ -103,13 +108,13 @@
                 </div>
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun6.jpg" alt="cheap service in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun6.jpg" alt="relax and have fun"/></a>
                         <div>
                             <h4>R2</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun7.jpg" alt="cheap service in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/fun7.jpg" alt="most beautiful escort girl"/></a>
                         <div>
                             <h4>B2</h4>
                         </div>
@@ -117,13 +122,13 @@
                 </div>
                 <div class="4u$ 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun8.jpg" alt=""/></a>
+                        <a href="#" class="image fit"><img src="images/fun8.jpg" alt="beautiful escort girl"/></a>
                         <div>
                             <h4>B1</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun9.jpg" alt=""/></a>
+                        <a href="#" class="image fit"><img src="images/fun9.jpg" alt="beautiful escort girl"/></a>
                         <div>
                             <h4>W2</h4>
                         </div>
@@ -139,38 +144,22 @@
         <div class="container">
 
             <header>
-                <h2>Contact</h2>
+                <h2>Contact Escorts</h2>
             </header>
 
-            <p>Have fun at the reasonable price. We provide a service that is not forgotten.
-                She'll be there to save your day.
-                Unlike most escort agencies out there, that use bait and switch tricks to attract new customers,
-                constantly changing their website domains and phone numbers - we have established an honorable
-                reputation in the industry. Our primary goal is to convert new customers into long term regular clients
-                by meeting and exceeding the high expectations of the most discriminating clientele. For over 14 years
-                we work with the same phone number and website! </p>
+            <p>Have fun at the reasonable price. We provide a service that is not forgotten. Our girls can be trusted,
+                we never reveal the identity.
+                Try our service and I promise you will come again. One stop need fulfilment for your all desires.
+            </p>
 
             <article class="item">
                 <img src="images/whatsapp.png" alt="" height="42" width="42"/>
-                <h3>+91-8750541626</h3>
-                <h3>+91-9015451766 </h3>
+
+                <h4>Just send "AVAILABILITY" to <strong> +91-9015451766 </strong> or <strong> +91-8750541626</strong>
+                </h4>
+
 
             </article>
-
-            <form method="post">
-                <div class="row1">
-                    <div class="12u$">
-                        <textarea name="message" placeholder="Simply send the dress color of girls above, we will understand your preference.
-                        'R1' to +91-8750541626 or +91-9015451766
-                        'W2' to +91-9015451766 or +91-9015451766
-                        'B1' to +91-8750541626 or +91-9015451766"></textarea>
-                    </div>
-                    <div class="1u$">
-                        <input type="submit" value="Just WhatsApp, that's simple"/>
-                    </div>
-                </div>
-            </form>
-
         </div>
     </section>
 
