--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Logo -->
         <div id="logo">
             <span class="image avatar48"><img src="images/admin.jpg" alt=""/></span>
-            <h1 id="title">Safe Escort Service</h1>
+            <h1 id="title" >Safe Escort Service</h1>
             <p hidden="hidden">Escort Service Gurgaon</p>
         </div>
 
@@ -185,6 +185,15 @@
 <!--[if lte IE 8]>
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-100068498-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
