--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta charset="utf-8"/>
 
     <meta name="keywords"
-          content="Escort service, Escorts Girls,Cheap Escort service, Safe Escort Service, Reliable Escort Service, Beautiful girls in Gurgaon, beautiful girl image,">
+          content="Gurgaon Escort, Gurgaon Escort service, Escorts Girls,Cheap Escort service, Safe Escort Service, Reliable Escort Service, Beautiful girls in Gurgaon, beautiful girl image,">
     <meta name="description"
-          content="Escort service, Escorts Girls,Cheap Escort service, Safe Escort Service, Reliable Escort Service, Beautiful girls in Gurgaon, beautiful girl image,">
+          content="Gurgaon Escort, Escorts, Escorts Girls,Cheap Escort service, Safe Escort Service, Reliable Escort Service, Beautiful girls in Gurgaon, beautiful girl image,">
 
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Here&#8217;s The Most Beautiful Girl In The Gurgaon"/>
@@ -54,7 +54,7 @@
             <ul>
                 <li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">About</span></a>
                 </li>
-                <li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Escort Services Available</span></a>
+                <li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Gallery</span></a>
                 </li>
                 <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact Escorts</span></a>
                 </li>
@@ -70,11 +70,11 @@
     <!-- Intro -->
     <section id="top1" class="one dark cover">
         <div>
-            <img src="images/whatsapp.png" alt="whatsapp escort" height="42" width="42"/>
-            <div style="color: #0e0806">
-                +91-8750541626,
-                +91-9015451766
-            </div>
+            <img src="images/whatsapp.png" alt="" height="42" width="42"/>
+
+            <h4>Just send "AVAILABILITY" to <strong> +91-9015451766 </strong> or <strong> +91-8750541626</strong>
+            </h4>
+
         </div>
 
         <div class="container">
@@ -98,23 +98,24 @@
         <div class="container">
 
             <header>
-                <h2>Escort Services Available</h2>
+                <h2>Gallery</h2>
             </header>
 
             <p> Come to us for safe escort service in Gurgaon. We have in the service for quite long. We have a
-                established and trusted name.
+                established and trusted name. We have a ranage of category to choose from.
                 Our girls are the cute, safe and lovable.</p>
 
             <div class="row">
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun.jpg" alt="cheap escort service in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/098.jpg" alt="cheap escort service in gurgaon"/></a>
                         <div>
                             <h4>R1</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun5.jpg" alt="best escort service in gurgaon"/></a>
+                        <a href="#" class="image fit"><img src="images/099.jpg"
+                                                           alt="best escort service in gurgaon"/></a>
                         <div>
                             <h4>W1</h4>
                         </div>
@@ -122,32 +123,64 @@
                 </div>
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun6.jpg" alt="relax and have fun"/></a>
+                        <a href="#" class="image fit"><img src="images/102.jpg" alt="relax and have fun"/></a>
                         <div>
                             <h4>R2</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun7.jpg" alt="most beautiful escort girl"/></a>
+                        <a href="#" class="image fit"><img src="images/103.jpg" alt="most beautiful escort girl"/></a>
                         <div>
                             <h4>B2</h4>
                         </div>
                     </article>
                 </div>
+
                 <div class="4u$ 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun8.jpg" alt="beautiful escort girl"/></a>
+                        <a href="#" class="image fit"><img src="images/133.jpg" alt="beautiful escort girl"/></a>
                         <div>
                             <h4>B1</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/fun9.jpg" alt="beautiful escort girl"/></a>
+                        <a href="#" class="image fit"><img src="images/134.jpg" alt="beautiful escort girl"/></a>
                         <div>
                             <h4>W2</h4>
                         </div>
                     </article>
                 </div>
+
+
+                <div class="4u$ 12u$(mobile)">
+                    <article class="item">
+                        <a href="#" class="image fit"><img src="images/102.jpg" alt="beautiful escort girl"/></a>
+                        <div>
+                            <h4>B1</h4>
+                        </div>
+                    </article>
+                    <article class="item">
+                        <a href="#" class="image fit"><img src="images/108.jpg" alt="beautiful escort girl"/></a>
+                        <div>
+                            <h4>W2</h4>
+                        </div>
+                    </article>
+                </div>
+                <div class="4u$ 12u$(mobile)">
+                    <article class="item">
+                        <a href="#" class="image fit"><img src="images/113.jpg" alt="beautiful escort girl"/></a>
+                        <div>
+                            <h4>B1</h4>
+                        </div>
+                    </article>
+                    <article class="item">
+                        <a href="#" class="image fit"><img src="images/118.jpg" alt="beautiful escort girl"/></a>
+                        <div>
+                            <h4>W2</h4>
+                        </div>
+                    </article>
+                </div>
+
             </div>
 
         </div>
