--- a/index.html
+++ b/index.html
@@ -108,22 +108,8 @@
             <div class="row">
                 <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/098.jpg" alt="cheap escort service in gurgaon"/></a>
-                        <div>
-                            <h4>R1</h4>
-                        </div>
-                    </article>
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/099.jpg"
-                                                           alt="best escort service in gurgaon"/></a>
-                        <div>
-                            <h4>W1</h4>
-                        </div>
-                    </article>
-                </div>
-                <div class="4u 12u$(mobile)">
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/102.jpg" alt="relax and have fun"/></a>
+                        <a href="#" class="image fit"><img src="images/102.jpg"
+                                                           alt="relax and have fun in gurgaon"/></a>
                         <div>
                             <h4>R2</h4>
                         </div>
@@ -144,39 +130,24 @@
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/134.jpg" alt="beautiful escort girl"/></a>
+                        <a href="#" class="image fit"><img src="images/135.jpg" alt="beautiful escort girl"/></a>
                         <div>
                             <h4>W2</h4>
                         </div>
                     </article>
                 </div>
-
-
-                <div class="4u$ 12u$(mobile)">
+                <div class="4u 12u$(mobile)">
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/102.jpg" alt="beautiful escort girl"/></a>
+                        <a href="#" class="image fit"><img src="images/101.jpg" alt="cheap escort in gurgaon"/></a>
                         <div>
-                            <h4>B1</h4>
+                            <h4>R1</h4>
                         </div>
                     </article>
                     <article class="item">
-                        <a href="#" class="image fit"><img src="images/108.jpg" alt="beautiful escort girl"/></a>
+                        <a href="#" class="image fit"><img src="images/116.jpg"
+                                                           alt="best escorts in gurgaon"/></a>
                         <div>
-                            <h4>W2</h4>
-                        </div>
-                    </article>
-                </div>
-                <div class="4u$ 12u$(mobile)">
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/113.jpg" alt="beautiful escort girl"/></a>
-                        <div>
-                            <h4>B1</h4>
-                        </div>
-                    </article>
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/118.jpg" alt="beautiful escort girl"/></a>
-                        <div>
-                            <h4>W2</h4>
+                            <h4>W1</h4>
                         </div>
                     </article>
                 </div>
