phone number fix

--- a/images/Escort Service Gurgaon.htm
+++ b/images/Escort Service Gurgaon.htm
@@ -150,7 +150,7 @@
             <article class="item">
                 <img src="./Escort Service Gurgaon_files/whatsapp.png" alt="" height="42" width="42">
                 <h3>+91-8750541626</h3>
-                <h3>+91-9015451766 </h3>
+                <h3>+91-9958003251 </h3>
 
             </article>
 
@@ -159,9 +159,9 @@
                     <div class="12u$">
                         <textarea name="message" placeholder="Simply text the dress color of girls above, we will understand your preference.
                         Example: Whatsapp
-                        &#39;R1&#39; to +91-8750541626 or +91-9015451766
-                        &#39;W2&#39; to +91-9015451766 or +91-9015451766
-                        &#39;B1&#39; to +91-8750541626 or +91-9015451766"></textarea>
+                        &#39;R1&#39; to +91-9958003251
+                        &#39;W2&#39; to +91-9958003251
+                        &#39;B1&#39; to +91-9958003251"></textarea>
                     </div>
                     <div class="1u$">
                         <input type="submit" value="Just WhatsApp, that&#39;s simple">
